@@ -21,6 +21,7 @@
 #include "cmap.h"
 #include "hmapx.h"
 #include "ofproto.h"
+#include "ofproto-dpif-trace.h"
 #include "vlan-bitmap.h"
 #include "openvswitch/vlog.h"
 
@@ -50,12 +51,18 @@ struct mbundle {
 
 struct mirror {
     struct mbridge *mbridge;    /* Owning ofproto. */
+    uint64_t change_seq;        /* Change sequence of owning ofproto. */
     size_t idx;                 /* In ofproto's "mirrors" array. */
     void *aux;                  /* Key supplied by ofproto's client. */
 
     /* Selection criteria. */
     struct hmapx srcs;          /* Contains "struct mbundle*"s. */
     struct hmapx dsts;          /* Contains "struct mbundle*"s. */
+
+    /* Filter criteria. */
+    OVSRCU_TYPE(struct miniflow *) filter;
+    OVSRCU_TYPE(struct minimask *) mask;
+    char *filter_str;
 
     /* This is accessed by handler threads assuming RCU protection (see
      * mirror_get()), but can be manipulated by mirror_set() without any
@@ -207,8 +214,8 @@ mirror_bundle_dst(struct mbridge *mbridge, struct ofbundle *ofbundle)
 }
 
 int
-mirror_set(struct mbridge *mbridge, void *aux,
-           const struct ofproto_mirror_settings *ms,
+mirror_set(struct mbridge *mbridge, const struct ofproto *ofproto,
+           void *aux, const struct ofproto_mirror_settings *ms,
            const struct mirror_bundles *mb)
 
 {
@@ -265,7 +272,11 @@ mirror_set(struct mbridge *mbridge, void *aux,
         && vlan_bitmap_equal(vlans, ms->src_vlans)
         && mirror->out == out
         && mirror->out_vlan == out_vlan
-        && mirror->snaplen == ms->snaplen)
+        && mirror->snaplen == ms->snaplen
+        && nullable_string_is_equal(mirror->filter_str, ms->filter)
+        /* If there is a filter, the datapath ports may have changed which
+         * could affect how the filter performs. Check change_seq if . */
+        && (!ms->filter || ofproto->change_seq == mirror->change_seq))
     {
         hmapx_destroy(&srcs_map);
         hmapx_destroy(&dsts_map);
@@ -288,6 +299,50 @@ mirror_set(struct mbridge *mbridge, void *aux,
     mirror->out = out;
     mirror->out_vlan = out_vlan;
     mirror->snaplen = ms->snaplen;
+
+    if (!nullable_string_is_equal(mirror->filter_str, ms->filter)) {
+        if (mirror->filter_str) {
+            ovsrcu_postpone(free, ovsrcu_get_protected(struct miniflow *,
+                                                       &mirror->filter));
+            ovsrcu_postpone(free, ovsrcu_get_protected(struct minimask *,
+                                                       &mirror->mask));
+            free(mirror->filter_str);
+            mirror->filter_str = NULL;
+            ovsrcu_set(&mirror->filter, NULL);
+            ovsrcu_set(&mirror->mask, NULL);
+        }
+
+        if (ms->filter && strlen(ms->filter)) {
+            struct ofputil_port_map map = OFPUTIL_PORT_MAP_INITIALIZER(&map);
+            struct flow_wildcards wc;
+            struct flow flow;
+            char *err;
+
+            ofproto_append_ports_to_map(&map, ofproto->ports);
+            err = parse_ofp_exact_flow(&flow, &wc,
+                                       ofproto_get_tun_tab(ofproto),
+                                       ms->filter, &map);
+            ofputil_port_map_destroy(&map);
+            if (err) {
+                VLOG_WARN("filter is invalid: %s", err);
+                free(err);
+                mirror_destroy(mbridge, mirror->aux);
+                return EINVAL;
+            }
+
+            /* Do not allow a filter on in_port. */
+            if (wc.masks.in_port.ofp_port) {
+                VLOG_WARN("filter is invalid due to in_port field.");
+                mirror_destroy(mbridge, mirror->aux);
+                return EINVAL;
+            }
+
+            mirror->filter_str = xstrdup(ms->filter);
+            ovsrcu_set(&mirror->mask, minimask_create(&wc));
+            ovsrcu_set(&mirror->filter, miniflow_create(&flow));
+            mirror->change_seq = ofproto->change_seq;
+        }
+    }
 
     /* Update mbundles. */
     mirror_bit = MIRROR_MASK_C(1) << mirror->idx;
@@ -342,6 +397,17 @@ mirror_destroy(struct mbridge *mbridge, void *aux)
     unsigned long *vlans = ovsrcu_get(unsigned long *, &mirror->vlans);
     if (vlans) {
         ovsrcu_postpone(free, vlans);
+    }
+
+    if (mirror->filter_str) {
+        ovsrcu_postpone(free, ovsrcu_get_protected(struct miniflow *,
+                                                   &mirror->filter));
+        ovsrcu_postpone(free, ovsrcu_get_protected(struct minimask *,
+                                                   &mirror->mask));
+        free(mirror->filter_str);
+        mirror->filter_str = NULL;
+        ovsrcu_set(&mirror->filter, NULL);
+        ovsrcu_set(&mirror->mask, NULL);
     }
 
     mbridge->mirrors[mirror->idx] = NULL;
@@ -415,7 +481,9 @@ mirror_update_stats(struct mbridge *mbridge, mirror_mask_t mirrors,
  * in which a 1-bit indicates that the mirror includes a particular VLAN,
  * 'mc->dup_mirrors' receives a bitmap of mirrors whose output duplicates
  * mirror 'index', 'mc->out' receives the output ofbundle (if any),
- * and 'mc->out_vlan' receives the output VLAN (if any).
+ * and 'mc->out_vlan' receives the output VLAN (if any). In cases where the
+ * mirror has a filter configured 'mc->filter_flow' and 'mc->filter_mask'
+ * receives the flow and mask that this mirror should collect.
  *
  * Everything returned here is assumed to be RCU protected.
  */
@@ -441,6 +509,8 @@ mirror_get(struct mbridge *mbridge, int index,
     mc->out_bundle = mirror->out ? mirror->out->ofbundle : NULL;
     mc->out_vlan = mirror->out_vlan;
     mc->snaplen = mirror->snaplen;
+    mc->filter_flow = ovsrcu_get(struct miniflow *, &mirror->filter);
+    mc->filter_mask = ovsrcu_get(struct minimask *, &mirror->mask);
     return true;
 }
 
