@@ -2250,7 +2250,8 @@ lookup_input_bundle(const struct xlate_ctx *ctx,
 
 /* Mirrors the packet represented by 'ctx' to appropriate mirror destinations,
  * given the packet is ingressing or egressing on 'xbundle', which has ingress
- * or egress (as appropriate) mirrors 'mirrors'. */
+ * or egress (as appropriate) mirrors 'mirrors'. In cases where a mirror is
+ * filtered, the current flows wildcard will be modified. */
 static void
 mirror_packet(struct xlate_ctx *ctx, struct xbundle *xbundle,
               mirror_mask_t mirrors)
@@ -2300,6 +2301,29 @@ mirror_packet(struct xlate_ctx *ctx, struct xbundle *xbundle,
         if (mc.vlans && !bitmap_is_set(mc.vlans, xvlan.v[0].vid)) {
             mirrors = zero_rightmost_1bit(mirrors);
             continue;
+        }
+
+        /* After the VLAN check, apply a flow mask if a filter is specified. */
+        if (ctx->wc && mc.filter_flow) {
+            if (OVS_UNLIKELY(
+                miniflow_equal_flow_in_minimask(mc.filter_flow,
+                                                &ctx->xin->flow,
+                                                mc.filter_mask))) {
+                flow_wildcards_union_with_minimask(ctx->wc, mc.filter_mask);
+            } else if (!miniflow_equal_flow_in_minimask(&mc.filter_mask->masks,
+                                                        &ctx->wc->masks,
+                                                        mc.filter_mask)) {
+                /* If flow isn't in the mirror filter but flow's wildcard mask
+                 * doesn't overlap with the filter mask then add the filter
+                 * mask to the flow's wildcard mask. This prevents mirrored
+                 * traffic from matching on this flow. */
+                flow_wildcards_union_with_minimask(ctx->wc, mc.filter_mask);
+                mirrors = zero_rightmost_1bit(mirrors);
+                continue;
+            } else {
+                mirrors = zero_rightmost_1bit(mirrors);
+                continue;
+            }
         }
 
         /* We sent a packet to this mirror. */
