@@ -5256,6 +5256,19 @@ ovs-vsctl add-port br0 p0 -- set Interface p0 type=patch options:peer=p1 \
         VLANs on which packets are selected for mirroring.  An empty set
         selects packets on all VLANs.
       </column>
+      <column name="filter">
+        <p>
+            Filter to apply to mirror. Flows that match <ref column="filter"/>
+            will flow through this mirror, flows that do not match will be
+            ignored. The <ref column="filter"/> syntax is described in
+            <code>ovs-fields</code>(7).
+        </p>
+        <p>
+            This filter is applied after <ref column="select_all"/>, <ref
+            column="select_dst_port"/>, <ref column="select_src_port"/>, and
+            <ref column="select_vlan"/>.
+        </p>
+      </column>
     </group>
 
     <group title="Mirroring Destination Configuration">
