@@ -4,6 +4,9 @@ Post-v3.3.0
      * Conntrack now supports 'random' flag for selecting ports in a range
        while natting and 'persistent' flag for selection of the IP address
        from a range.
+   - OVSDB:
+     * Added a new filter column in the Mirror table which can be used to
+       apply filters to mirror ports.
 
 
 v3.3.0 - 16 Feb 2024
